namespace WebAPI.Models
{
    public class ExerciseModel
    {
        public int Id { get; set; }
        public string Name { get; set; }
        public string Description { get; set; }
        public string MuscleGroup { get; set; }
        public string Equipment { get; set; }
        public string Image { get; set; }
    }
}
